kube-config/kubectl/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      labels:
        components: api
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /etc/test
              name: api-config
              readOnly: true
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:3000/api
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 1
      volumes:
        - name: api-config
          configMap:
            name: api-config
