kube-config/kubectl/converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-converter-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      components: converter
  template:
    metadata:
      labels:
        components: converter
    spec:
      containers:
        - name: conv-converter
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3100
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
