kube-config/kubectl/rmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rmq
  template:
    metadata:
      labels:
        components: rmq
    spec:
      containers:
        - name: rmq
          image: rabbitmq:4.1.2-management
          ports:
            - containerPort: 15672
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
          volumeMounts:
            - name: rmq-data
              mountPath: /var/lib/rabbitmq
              subPath: rmq
            - name: rmq-uploads
              mountPath: /opt/app/uploads
      volumes:
        - name: rmq-data
          persistentVolumeClaim:
            claimName: rmq-pvc
        - name: rmq-uploads
          persistentVolumeClaim:
            claimName: rmq-uploads-pvc
