kube-config/kubectl/converter-service.yml
apiVersion: v1
kind: Service
metadata:
    name: conv-converter-clusterip
spec:
    type: ClusterIP
    selector:
        components: converter
    ports:
        - port: 3100
          protocol: TCP
