kube-config/kubectl/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-postgres-clasterip
spec:
  type: ClusterIP
  selector:
    components: postgres
  ports:
    - port: 5432
      protocol: TCP
