kube-config/kubectl/rmq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rmq-clasterip
spec:
  type: ClusterIP
  selector:
    components: rmq
  ports:
    - port: 15672
      protocol: TCP
